cmake_minimum_required(VERSION 3.16)
project(Foo)

set(CMAKE_CXX_STANDARD 20)
if (WIN32)
	include_directories("C:\\tools\\msys64\\mingw64\\include" "C:\\tools\\msys64\\mingw64\\include\\ncursesw")
	link_directories("C:\\tools\\msys64\\mingw64\\lib")
endif(WIN32)
add_executable(${PROJECT_NAME} main.cpp)
target_link_libraries(${PROJECT_NAME} ncurses)
